--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alim-portfolio",
+  "name": "saifalim_",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "postprocessing": "^6.37.8",
